--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -30,18 +30,18 @@ jobs:
     # setup  
     - name: checkout
       uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: dotnet clean
-      run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
-    - name: dotnet restore
-      run: dotnet restore ./WolvenKit.sln 
 
      # environmental variables
     - run: echo "PROJ=./WolvenKit/WolvenKit.csproj" >> $env:GITHUB_ENV
-    - run: echo "OUT=./publish/full" >> $env:GITHUB_ENV
+    - run: echo "PROJC=./WolvenKit.CLI/WolvenKit.CLI.csproj" >> $env:GITHUB_ENV
+    - run: echo "OUT=./publish/app/" >> $env:GITHUB_ENV
+    - run: echo "OUTC=./publish/console/" >> $env:GITHUB_ENV
     - run: echo "FINALOUT=./publish" >> $env:GITHUB_ENV
     - run: echo "NAME=WolvenKit" >> $env:GITHUB_ENV
     - run: echo "REF=${{github.ref}}" >> $env:GITHUB_ENV
@@ -53,6 +53,11 @@ jobs:
       id: get-version
       with:
         proj-path:  ${{env.PROJ}}
+    - name: Get console version
+      uses: naminodarie/get-net-sdk-project-versions-action@v1
+      id: get-version-cli
+      with:
+        proj-path: ${{env.PROJC}}
     - name: Get Date
       run: |
         $date = Get-Date -Format "yyyy-MM-dd"
@@ -60,34 +65,49 @@ jobs:
         
         
     - run: echo "VERSION=${{steps.get-version.outputs.assembly-version}}-nightly.${{env.ISODATE}}" >> $env:GITHUB_ENV
+    - run: echo "VERSIONC=${{steps.get-version-cli.outputs.assembly-version}}-nightly.${{env.ISODATE}}" >> $env:GITHUB_ENV
     
     # Publish app
-    - run: dotnet publish ${{env.PROJ}} -o ${{env.OUT}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows /p:InformationalVersion="${{env.VERSION}}"
+    - run: msbuild ${{env.PROJ}} -t:restore;Build;Publish /p:PublishDir="${{env.OUT}}";InformationalVersion="${{env.VERSION}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
     
+    # Publish console
+    - run: msbuild ${{env.PROJC}} -t:restore;Build;Publish /p:PublishDir="${{env.OUTC}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
+
     - run: echo "PORTABLE=${{env.NAME}}-${{env.VERSION}}.zip" >> $env:GITHUB_ENV
+    - run: echo "CONSOLE=${{env.NAME}}.Console-${{env.VERSIONC}}.zip" >> $env:GITHUB_ENV
     - run: echo "INSTALLER=${{env.NAME}}-installer-${{env.VERSION}}.exe" >> $env:GITHUB_ENV
     - run: echo "MANIFEST=manifest.json" >> $env:GITHUB_ENV
 
     # Create assets
-    - run: ${{env.OUT}}/WolvenManager.Installer.exe create -a ${{env.OUT}}\${{env.NAME}}.exe -o ${{env.FINALOUT}}
-    - run: .\Installers\ISCC\ISCC.exe /O"${{env.FINALOUT}}" /dMyAppBaseDir=".${{env.OUT}}\" .\Installers\installer.iss
-    - run: ${{env.OUT}}/WolvenManager.Installer.exe manifest -a ${{env.OUT}}\${{env.NAME}}.exe -i ${{env.FINALOUT}} -o ${{env.FINALOUT}}
+    # create zip
+    #- run: ${{env.OUT}}/WolvenManager.Installer.exe create -a ${{env.OUT}}${{env.NAME}}.exe -o ${{env.FINALOUT}}
+    - run: Compress-Archive -Path ${{env.OUT}} -DestinationPath ${{env.FINALOUT}}/${{env.PORTABLE}}
+    - run: Compress-Archive -Path ${{env.OUTC}} -DestinationPath ${{env.FINALOUT}}/${{env.CONSOLE}}
+    # create installer
+    - run: .\Installers\ISCC\ISCC.exe /O"${{env.FINALOUT}}" /dMyAppBaseDir=".${{env.OUT}}" .\Installers\installer.iss
+    # create manifest
+    - run: ${{env.OUT}}/WolvenManager.Installer.exe manifest -a ${{env.OUT}}${{env.NAME}}.exe -i ${{env.FINALOUT}} -o ${{env.FINALOUT}}
 
     # PORTABLE
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.PORTABLE}}
-        path: ${{env.FINALOUT}}/${{env.PORTABLE}}
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{env.NAME}}-${{env.VERSION}}
+    #    path: ${{env.OUT}}
     # INSTALLER
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.INSTALLER}}
-        path: ${{env.FINALOUT}}/${{env.INSTALLER}}
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{env.NAME}}-installer-${{env.VERSION}}
+    #    path: ${{env.FINALOUT}}/${{env.INSTALLER}}
     # MANIFEST
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.MANIFEST}}
-        path: ${{env.FINALOUT}}/${{env.MANIFEST}}
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{env.MANIFEST}}
+    #    path: ${{env.FINALOUT}}/${{env.MANIFEST}}
+    # CONSOLE
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #   name: ${{env.NAME}}.Console-${{env.VERSIONC}}
+    #    path: ${{env.OUTC}}
 
     # RELEASE
     - name: Release
@@ -95,7 +115,7 @@ jobs:
           gh release create ${{ env.VERSION }} -n "${{ env.MESSAGE }}" -t "${{ env.VERSION }}" -R ${{ env.REPO }} ${{ env.FILES }}
       env:
         MESSAGE: "This is a beta release so you may encounter bugs. Please report them. The latest commit this release is based on is: [#${{env.SHA}}](https://github.com/${{env.MREPO}}/commit/${{env.SHA}})"
-        FILES: ${{env.FINALOUT}}/${{env.PORTABLE}} ${{env.FINALOUT}}/${{env.INSTALLER}} ${{env.FINALOUT}}/${{env.MANIFEST}}
+        FILES: ${{env.FINALOUT}}/${{env.PORTABLE}} ${{env.FINALOUT}}/${{env.CONSOLE}} ${{env.FINALOUT}}/${{env.INSTALLER}} ${{env.FINALOUT}}/${{env.MANIFEST}}
         REPO: WolvenKit/WolvenKit-nightly-releases
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
     
