--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,79 +18,79 @@ jobs:
     # setup  
     - name: checkout
       uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: dotnet clean
-      run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
-    - name: dotnet restore
-      run: dotnet restore ./WolvenKit.sln 
 
      # environmental variables
     - run: echo "PROJ=./WolvenKit/WolvenKit.csproj" >> $env:GITHUB_ENV
-    - run: echo "OUT=./publish/full" >> $env:GITHUB_ENV
-    - run: echo "FINALOUT=./publish" >> $env:GITHUB_ENV
+    - run: echo "OUT=./publish/app/" >> $env:GITHUB_ENV
+    #- run: echo "FINALOUT=./publish" >> $env:GITHUB_ENV
     - run: echo "NAME=WolvenKit" >> $env:GITHUB_ENV
+
     - name: Get version
       uses: naminodarie/get-net-sdk-project-versions-action@v1
       id: get-version
       with:
         proj-path:  ${{env.PROJ}}
+
     - run: echo "VERSION=${{steps.get-version.outputs.assembly-version}}" >> $env:GITHUB_ENV
-    - run: echo "PORTABLE=${{env.NAME}}-${{env.VERSION}}.zip" >> $env:GITHUB_ENV
-    - run: echo "INSTALLER=${{env.NAME}}-installer-${{env.VERSION}}.exe" >> $env:GITHUB_ENV
-    - run: echo "MANIFEST=manifest.json" >> $env:GITHUB_ENV
+    #- run: echo "PORTABLE=${{env.NAME}}-${{env.VERSION}}" >> $env:GITHUB_ENV
+    #- run: echo "INSTALLER=${{env.NAME}}-installer-${{env.VERSION}}.exe" >> $env:GITHUB_ENV
+    #- run: echo "MANIFEST=manifest.json" >> $env:GITHUB_ENV
 
     # Publish app
-    - run: dotnet publish ${{env.PROJ}} -o ${{env.OUT}} --no-self-contained --no-restore -r win-x64 -c Release -f net5.0-windows
+    - run: msbuild ${{env.PROJ}} -t:restore;Build;Publish /p:PublishDir="${{env.OUT}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
+
+    - run: Compress-Archive -Path ${{env.OUT}} -DestinationPath ${{env.NAME}}-${{env.VERSION}}.zip
 
     # Create assets
-    - run: ${{env.OUT}}/WolvenManager.Installer.exe create -a ${{env.OUT}}\${{env.NAME}}.exe -o ${{env.FINALOUT}}
-    - run: .\Installers\ISCC\ISCC.exe /O"${{env.FINALOUT}}" /dMyAppBaseDir=".${{env.OUT}}\" .\Installers\installer.iss
-    - run: ${{env.OUT}}/WolvenManager.Installer.exe manifest -a ${{env.OUT}}\${{env.NAME}}.exe -i ${{env.FINALOUT}} -o ${{env.FINALOUT}}
+    #- run: ${{env.OUT}}/WolvenManager.Installer.exe create -a ${{env.OUT}}\${{env.NAME}}.exe -o ${{env.FINALOUT}}
+    #- run: .\Installers\ISCC\ISCC.exe /O"${{env.FINALOUT}}" /dMyAppBaseDir=".${{env.OUT}}\" .\Installers\installer.iss
+    #- run: ${{env.OUT}}/WolvenManager.Installer.exe manifest -a ${{env.OUT}}\${{env.NAME}}.exe -i ${{env.FINALOUT}} -o ${{env.FINALOUT}}
 
     # PORTABLE
     - uses: actions/upload-artifact@v2
       with:
-        name: ${{env.PORTABLE}}
-        path: ${{env.FINALOUT}}/${{env.PORTABLE}}
+        name: ${{env.NAME}}-${{env.VERSION}}
+        path: ${{env.OUT}}
     # INSTALLER
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.INSTALLER}}
-        path: ${{env.FINALOUT}}/${{env.INSTALLER}}
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{env.INSTALLER}}
+    #    path: ${{env.FINALOUT}}/${{env.INSTALLER}}
     # MANIFEST
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.MANIFEST}}
-        path: ${{env.FINALOUT}}/${{env.MANIFEST}}
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{env.MANIFEST}}
+    #    path: ${{env.FINALOUT}}/${{env.MANIFEST}}
 
 
   check-console-win:
     runs-on: windows-latest
     
     steps:
+    # setup  
     - name: checkout
       uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: dotnet clean
-      run: dotnet clean ./CP77Tools.sln --configuration Release && dotnet nuget locals all --clear
-    - name: dotnet restore
-      run: dotnet restore ./CP77Tools.sln
 
     - name: Get version
       uses: naminodarie/get-net-sdk-project-versions-action@v1
       id: get-version
       with:
         proj-path: ./WolvenKit.CLI/WolvenKit.CLI.csproj
-    - run: echo "${{steps.get-version.outputs.assembly-version}}"
 
-    - name: dotnet publish WolvenKit.Console
-      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o publish/console/wolvenkit-console-${{steps.get-version.outputs.assembly-version}} --no-self-contained -r win-x64 -c Release -f net5.0
+    - name: publish WolvenKit.Console
+      run: msbuild .\WolvenKit.CLI\WolvenKit.CLI.csproj -t:restore;Build;Publish /p:PublishDir="../publish/console/";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
