--- a/WolvenKit.CLI/WolvenKit.CLI.csproj
+++ b/WolvenKit.CLI/WolvenKit.CLI.csproj
@@ -5,7 +5,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyVersion>1.5.0</AssemblyVersion>
-      <Version>1.5.0</Version>
+    <InformationalVersion>>1.5.0</InformationalVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <PackAsTool>true</PackAsTool>
       <ToolCommandName>cp77tools</ToolCommandName>
@@ -21,9 +21,10 @@
       <RepositoryType>git</RepositoryType>
       <PackageTags>wolvenkit, cyberpunk2077</PackageTags>
       <StartupObject>WolvenKit.CLI.Program</StartupObject>
-    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
       <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
       <DebugType>embedded</DebugType>
+    <PublishSingleFile>false</PublishSingleFile>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
