--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -15,6 +15,7 @@
         <InformationalVersion>1.3.0</InformationalVersion>
 		<NoWarn>$(NoWarn);NU5104</NoWarn>
 		<Platforms>x64</Platforms>
+      <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 	</PropertyGroup>
 
 	<ItemGroup>
