--- a/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
+++ b/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
@@ -10,6 +10,7 @@
     <Version>0.1.0</Version>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <ItemGroup>
