--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,8 @@ jobs:
     #- run: echo "MANIFEST=manifest.json" >> $env:GITHUB_ENV
 
     # Publish app
-    - run: msbuild ${{env.PROJ}} -t:restore;Build;Publish /p:PublishDir="${{env.OUT}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
+    - uses: ilammy/msvc-dev-cmd@v1
+      run: msbuild ${{env.PROJ}} -t:restore;Build;Publish /p:PublishDir="${{env.OUT}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
 
     - run: Compress-Archive -Path ${{env.OUT}} -DestinationPath ${{env.NAME}}-${{env.VERSION}}.zip
 
@@ -89,7 +90,7 @@ jobs:
       with:
         proj-path: ./WolvenKit.CLI/WolvenKit.CLI.csproj
 
-    - name: publish WolvenKit.Console
+    - uses: ilammy/msvc-dev-cmd@v1
       run: msbuild .\WolvenKit.CLI\WolvenKit.CLI.csproj -t:restore;Build;Publish /p:PublishDir="../publish/console/";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
 
     - name: Upload a Build Artifact
