--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     #- run: echo "MANIFEST=manifest.json" >> $env:GITHUB_ENV
 
     # Publish app
-    - run: msbuild ${{env.PROJ}} -t:restore;Publish /p:PublishDir="${{env.OUT}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
+    - run: msbuild ${{env.PROJ}} -t:restore;Build;Publish /p:PublishDir="${{env.OUT}}";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
 
     - run: Compress-Archive -Path ${{env.OUT}} -DestinationPath ${{env.NAME}}-${{env.VERSION}}.zip
 
@@ -92,7 +92,7 @@ jobs:
         proj-path: ./WolvenKit.CLI/WolvenKit.CLI.csproj
 
     - name: publish WolvenKit.Console
-      run: msbuild .\WolvenKit.CLI\WolvenKit.CLI.csproj -t:restore;Publish /p:PublishDir="../publish/console/";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
+      run: msbuild .\WolvenKit.CLI\WolvenKit.CLI.csproj -t:restore;Build;Publish /p:PublishDir="../publish/console/";Configuration=Release;Platform=x64;SelfContained=False;PublishReadyToRun=False;PublishTrimmed=False
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
