--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -25,9 +25,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\Others\**" />
+    <Compile Remove="ViewModels\Shared\**" />
     <Compile Remove="ViewModels\Wizards\PublishWizard\**" />
+    <EmbeddedResource Remove="ViewModels\Others\**" />
+    <EmbeddedResource Remove="ViewModels\Shared\**" />
     <EmbeddedResource Remove="ViewModels\Wizards\PublishWizard\**" />
+    <None Remove="ViewModels\Others\**" />
+    <None Remove="ViewModels\Shared\**" />
     <None Remove="ViewModels\Wizards\PublishWizard\**" />
+    <Page Remove="ViewModels\Others\**" />
+    <Page Remove="ViewModels\Shared\**" />
     <Page Remove="ViewModels\Wizards\PublishWizard\**" />
   </ItemGroup>
 
@@ -94,8 +102,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Arguments\" />
-    <Folder Include="ViewModels\Others\" />
-    <Folder Include="ViewModels\Shared\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
