--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="WinCopies.WindowsAPICodePack" Version="2.5.0" />
     <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.5.0" />
