--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -68,7 +68,7 @@
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="WinCopies.WindowsAPICodePack" Version="2.5.0" />
     <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.5.0" />
-    <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
+    <PackageReference Include="HandyControls" Version="3.3.7" />
       <PackageReference Include="MahApps.Metro.IconPacks.Codicons" Version="4.8.0" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Magick.NET-Q16-HDRI-AnyCPU" Version="8.1.0" />
