--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -25,9 +25,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\Others\**" />
+    <Compile Remove="ViewModels\Shared\**" />
     <Compile Remove="ViewModels\Wizards\PublishWizard\**" />
+    <EmbeddedResource Remove="ViewModels\Others\**" />
+    <EmbeddedResource Remove="ViewModels\Shared\**" />
     <EmbeddedResource Remove="ViewModels\Wizards\PublishWizard\**" />
+    <None Remove="ViewModels\Others\**" />
+    <None Remove="ViewModels\Shared\**" />
     <None Remove="ViewModels\Wizards\PublishWizard\**" />
+    <Page Remove="ViewModels\Others\**" />
+    <Page Remove="ViewModels\Shared\**" />
     <Page Remove="ViewModels\Wizards\PublishWizard\**" />
   </ItemGroup>
 
@@ -56,10 +64,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="WinCopies.WindowsAPICodePack" Version="2.5.0" />
     <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.5.0" />
-    <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
+    <PackageReference Include="HandyControls" Version="3.3.7" />
       <PackageReference Include="MahApps.Metro.IconPacks.Codicons" Version="4.8.0" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Magick.NET-Q16-HDRI-AnyCPU" Version="8.1.0" />
@@ -94,8 +103,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Arguments\" />
-    <Folder Include="ViewModels\Others\" />
-    <Folder Include="ViewModels\Shared\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
