documentViewModels and namespace fix

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -49,10 +49,7 @@
     <Compile Remove="Models\ImageUtility.cs" />
     <Compile Remove="Models\ImportModel.cs" />
     <Compile Remove="Models\IWolvenkitView.cs" />
-    <Compile Remove="ViewModels\Editor\BulkEditViewModel.cs" />
-    <Compile Remove="ViewModels\Editor\Documents\IDocumentViewModel_old.cs" />
-    <Compile Remove="ViewModels\Editor\ImportViewModel.cs" />
-    <Compile Remove="ViewModels\Editor\ModKitViewModel.cs" />
+    <Compile Remove="ViewModels\Documents\IDocumentViewModel_old.cs" />
     <Compile Remove="ViewModels\HomePage\Pages\RecentlyUsedItemsViewModel.cs" />
     <Compile Remove="ViewModels\Wizards\PublishWizardViewModel.cs" />
   </ItemGroup>
