--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -356,7 +356,7 @@
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.2.0.49" />
     <PackageReference Include="Syncfusion.Themes.Office2019Black.WPF" Version="19.2.0.49" />
       <PackageReference Include="Syncfusion.Tools.WPF" Version="19.2.0.49" />
-    
+    <PackageReference Include="AvalonEdit" Version="6.1.2.30" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="SharpVectors.Reloaded" Version="1.7.5" />
     <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
