--- a/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
+++ b/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.1.3" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
   <ItemGroup>
