- General fixes - Started working on modifing cr2w files

--- a/WolvenKit.RED4.Archive/WolvenKit.RED4.Archive.csproj
+++ b/WolvenKit.RED4.Archive/WolvenKit.RED4.Archive.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Folder Include="Types\" />
   </ItemGroup>
 
 </Project>
