--- a/WolvenKit.RED4.Types/WolvenKit.RED4.Types.csproj
+++ b/WolvenKit.RED4.Types/WolvenKit.RED4.Types.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
   </ItemGroup>
 
