--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
     <ProjectReference Include="..\WolvenKit.RED4.CR2W\WolvenKit.RED4.CR2W.csproj" />
+    <ProjectReference Include="..\WolvenKit.RED4.TweakDB\WolvenKit.RED4.TweakDB.csproj" />
   </ItemGroup>
 
 </Project>
