--- a/WolvenManager.Installer/WolvenManager.Installer.csproj
+++ b/WolvenManager.Installer/WolvenManager.Installer.csproj
@@ -12,10 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21216.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
+    <PackageReference Include="semver" Version="2.0.6" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
